# ZEN_API_Python_CZI_workshop

./: .gitignore  2025_10_14_Schedule_Smart_Microscopy_Workshop.md  README.md  SCHEDULE.md  pyproject.toml  workshop.md  workshop.qmd
workshop/: env_smartmic.yml  env_zenapi_essential.yml
workshop/czi_omezarr/: ngff_define_plate.py  write_hcs_ngffzarr.py  write_hcs_omezarr.py  write_omezarr_adv.py  write_omezarr_ngff.py
workshop/notebooks/: Regresssion_PyTorch.ipynb  SingleClassSemanticSegmentation_PyTorch.ipynb  newCZI_stack.czi  run_prediction_from_czann.ipynb  saved_torch_regression_model.pt  unpack_czann.ipynb  using_pylibCZIrw.ipynb
workshop/notebooks/models/: saved_torch_regression_model.pt  saved_torch_segmentation_model.pt  simple_kidney_regmodel_from_json_pytorch.czann  simple_nuclei_segmodel_from_json_pytorch.czann  simple_pytorch_kidney_regmodel.czann  simple_pytorch_nuclei_segmodel_pytorch.czann
workshop/utils/: CODE_REVIEW_SUMMARY.md  check_gpu_onnx.py  diagnose_cuda.py  processing_tools.py
workshop/zen_api/: processing_tools.py  segement_image.py  segment_objects.py  zenapi_experiment_methods.py  zenapi_experiment_status.py  zenapi_experiment_tools.py  zenapi_guidedacq.py  zenapi_positions.py  zenapi_stage_LM.py  zenapi_streaming.py  zenapi_swaf.py  zenapi_tileregion.py  zenapi_tools.py  zenapi_tracks.py  zenapi_zstack.py
workshop/zen_api/data/: OverViewScan_seg.csv  OverViewScan_seg.czi
workshop/zen_api/zen_api_utils/: stage.py
