[project]
name = "ZEN_Python_CZI_Smart_Microscopy_Workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"colormap",
"czifile",
#"cudnn==9.13.1.26",
#"nvidia-cudnn-cu11",
"dask",
"dask-image",
"docker-py",
"docutils",
"fastapi",
"flask",
"fsspec",
"ipyfilechooser",
"ipykernel",
"magicgui",
"marimo",
"matplotlib",
"napari>=0.6.5",
"numpy",
"ome-zarr",
"opencv-python",
"pandas",
"plotly",
"pooch",
"pyqt5",
"pyqtgraph",
"pytest",
"pytest-cov",
"torch==2.5.1",
#"pytorch-cuda==12.4",
"python-box[all]",
"python-dateutil",
"qasync",
"requests",
"scikit-image>=0.19.3",
"seaborn",
"setuptools",
"shapely",
"superqt",
# "torchvision",
"tqdm",
"validators",
"wheel",
"xarray",
"xarray[complete]",
"xmltodict",
"zarr",
"aicspylibczi>=3.3.1",
"betterproto==2.0.0b7",
"betterproto[compiler]==2.0.0b7",
"bioio",
"bioio-czi",
"bioio-imageio",
"bioio-ome-tiff",
"bioio-ome-zarr",
"czmodel[pytorch]>=5",
"cztile",
"czitools",
"grpclib",
"loguru",
"mowidget",
"napari-assistant",
"napari-brightness-contrast",
"napari-clusters-plotter",
"napari-crop",
"napari-czann-segment",
"napari-czitools",
"napari-layer-details-display",
"napari-ome-zarr",
"napari-plugin-search",
"napari-simpleitk-image-processing",
"napari-skimage-regionprops",
"ngff-zarr",
"ngff-zarr[dask-image]",
"ngff-zarr[validate]",
"onnxruntime-gpu==1.19.0",
"pylibCZIrw",
"ryomen",
"tiler",
"wigglystuff",
"GPUtil",
"psutil",
]
